# kv-entity

./: Cargo.toml  README.md
kv-entity/: Cargo.toml  build.rs
kv-entity-derive/: Cargo.toml
kv-entity-derive/src/: lib.rs
kv-entity/examples/: mini.rs
kv-entity/protobuf/: metadata.proto
kv-entity/src/: bundle.rs  db.rs  entity_handler.rs  error.rs  filter.rs  lib.rs  meta.rs  utils.rs
