[package]
name = "kv-entity"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
inventory = "0.3.21"
kv-entity-derive = { path = "../kv-entity-derive" }
log = { version = "0.4.28" }
prost = "0.14.1"
thiserror = "2.0.17"
tikv-client = "0.3.0"

[dev-dependencies]
env_logger = "0.11"
uuid = { version = "1.18", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.14.1"

[patch.crates-io]
tonic = "0.14.2"
